--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <!-- Dua Generator Section -->
         <section id="dua" class="py-12 md:py-16">
             <h2 class="text-3xl md:text-4xl font-bold text-center mb-4 text-[#002b36]">ব্যক্তিগত দোয়া জেনারেটর</h2>
-            <p class="text-center max-w-2xl mx-auto mb-8">আপনার মনের অবস্থা বা প্রয়োজন সম্পর্কে সংক্ষেপে লিখুন (যেমন: "আমি উদ্বিগ্ন" বা "কৃতজ্ঞতা প্রকাশ করতে চাই")। Gemini API আপনার জন্য একটি সুন্দর ও ব্যক্তিগত দোয়া তৈরি করবে।</p>
+            <p class="text-center max-w-2xl mx-auto mb-8">আপনার মনের অবস্থা বা প্রয়োজন সম্পর্কে সংক্ষেপে লিখুন (যেমন: "আমি উদ্বিগ্ন" বা "কৃতজ্ঞতা প্রকাশ করতে চাই")। এটি আপনার জন্য একটি সুন্দর ও ব্যক্তিগত দোয়া তৈরি করবে।</p>
             <div class="max-w-xl mx-auto">
                 <textarea id="duaInput" class="w-full p-3 border-2 border-gray-300 rounded-lg focus:ring-2 focus:ring-[#268BD2] focus:border-transparent transition" rows="3" placeholder="আপনার অনুভূতি এখানে লিখুন..."></textarea>
                 <div class="text-center mt-4">
@@ -242,7 +242,7 @@
 
     <footer class="text-center mt-12 py-8 border-t border-[#93A1A1]/50">
         <p class="text-lg font-semibold text-[#002b36]">"তারাই সত্যিকারের বুদ্ধিমান, যারা ক্ষণস্থায়ী দুনিয়ার বিনিময়ে চিরস্থায়ী জান্নাতকে ক্রয় করে নেয়।"</p>
-        <p class="text-sm mt-2">এই অ্যাপ্লিকেশনটি "প্রকৃত ইবাদতকারী" প্রতিবেদনের উপর ভিত্তি করে তৈরি এবং Gemini API দ্বারা সমৃদ্ধ।</p>
+        <p class="text-sm mt-2">"প্রকৃত ইবাদতকারী"</p>
     </footer>
 
 <script>
